test: crate tests :zap:
